PA3/tests/bad/bad_main_inherit.cl
class A {
	m() : SELF_TYPE {
		1
	};
};

class Main inherits SELF_TYPE {
	main() : SELF_TYPE {
		new A
	};
};
